Enhanced few UI issues: [X] Height collapses to min-content when form is closed [X] Changed Github color to Black with icon [X] Renamed Edit -> Save for button [X] Minor Whitespaces added

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,14 @@
 * {
   color: #454543;
 }
+html {
+  height: max-content !important;
+}
+
+body{
+  min-width: 332px !important;
+}
+
 main {
   padding: 16px;
 }
@@ -40,4 +48,16 @@ main {
 
 .pt-4{
   padding-top: 4px;
+}
+
+.me-4{
+  margin-right: 4px !important;
+}
+
+.ui.label > img{
+  width: 13px !important;
+  height: 13px !important;
+  position: relative;
+  top: -1px;
+  margin-right: 4px;
 }
